Verification for Hybrid node pool/Case-14-Limit-egress-using-private-ip/Testpods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: windows-pod
  namespace: development
  labels:
    app: backend
spec:
  containers:
    - name: windows-pod
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - $listener = New-Object System.Net.HttpListener; $listener.Prefixes.Add('http://*:80/'); $listener.Start();Write-Host('Listening at http://*:80/'); while ($listener.IsListening) { $context = $listener.GetContext(); $response = $context.Response; $content='<html><body><H1>Red Hat OpenShift + Windows Container Workloads</H1></body></html>'; $buffer = [System.Text.Encoding]::UTF8.GetBytes($content); $response.ContentLength64 = $buffer.Length; $response.OutputStream.Write($buffer, 0, $buffe [...]
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
---
apiVersion: v1
kind: Pod
metadata:
  name: linux-pod
  namespace: development
  labels:
    app: backend
spec:
  containers:
    - name: linux-pod
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      ports:
        - containerPort: 80
  nodeSelector:
    kubernetes.io/os: linux
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: frontend
  name: lin-frontend-testpod
  namespace: development
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - sleep 360000
      image: busybox:1.28
      imagePullPolicy: Always
      name: lin-frontend-testpod
  nodeSelector:
    kubernetes.io/os: linux
---
apiVersion: v1
kind: Pod
metadata:
  name: win-frontend-testpod
  namespace: development
  labels:
    app: frontend
spec:
  containers:
    - name: win-frontend-testpod
      image: mcr.microsoft.com/windows/servercore:ltsc2022
      args:
        - powershell.exe
        - -Command
        - "Start-Sleep 360000"
      imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
    kubernetes.azure.com/os-sku: Windows2022
